# srfm-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml
srfm/: __init__.py  core.py  engine.py  geodesic.py  manifold.py  pandas_ext.py  polars_ext.py
tests/: test_core.py  test_engine.py  test_geodesic.py  test_manifold.py  test_pandas_ext.py
