[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srfm-python"
version = "0.1.0"
description = "Python SDK for Special Relativity Financial Modeling — Lorentz factors, spacetime intervals, geodesic signals on OHLCV data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "finance", "quant", "special-relativity", "lorentz",
    "trading", "ohlcv", "geodesic", "numpy", "pandas"
]
authors = [{ name = "Matthew Busel" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
]

[project.optional-dependencies]
polars = ["polars>=0.20"]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pandas",
    "polars",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["srfm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
